# hyper-copy

./: .env.example  .gitignore  README.md  pyproject.toml
api/: main.py  routes.py  schemas.py
scripts/: dev.sh  test_copy.py  test_fetch.py  test_leaderboard.py  test_score.py
src/hyper_copy/: client.py  config.py  copy_engine.py  db.py  executor.py  leaderboard.py  models.py  risk.py  scorer.py  seeds.py
web/app/: layout.tsx  page.tsx
web/app/components/: ActivityFeed.tsx  AddressCell.tsx  CopyButton.tsx  CopyCard.tsx  CopyDashboard.tsx  CopyWizard.tsx  FillsTable.tsx  Header.tsx  LeaderboardTable.tsx  PnlSummary.tsx  PositionsTable.tsx  ScoreBreakdown.tsx  SubmitTrader.tsx  ToastContainer.tsx  TraderHeader.tsx  WalletSetup.tsx
web/app/copies/: page.tsx
web/app/hooks/: useToast.ts  useWallet.ts
web/app/trader/[address]/: page.tsx
web/lib/: api.ts  utils.ts
