[project]
name = "hyper-copy"
version = "0.1.0"
description = "Hyperliquid copy trading platform -- track, score, and mirror top traders"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
